# UtaBuild

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: cache.rs  cache_manager.rs  lib.rs  logger.rs  main.rs  models.rs  output.rs  platform.rs  searcher.rs
cli/src/commands/: history.rs  mod.rs  search.rs
docs/: ARCHITECTURE.md  CODE_REVIEW.md  RUBY_RENDERING.md
scripts/: send_keys.ps1
src/: index.html  test-ruby.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/js/: app.js
