[package]
name = "utabuild"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "utabuild"
path = "src/main.rs"

[lib]
name = "utabuild"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# CLI库 - 直接引用本地代码
# 注意：路径相对于 src-tauri/
utabuild-cli = { path = "../cli" }

[features]
default = []
android = ["utabuild-cli/android"]

[profile.release]
strip = true
lto = true
opt-level = "s"
